--- a/staffview.ui
+++ b/staffview.ui
@@ -6,51 +6,49 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>402</width>
+    <height>274</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Main Staff Window</string>
   </property>
-  <widget class="QPushButton" name="logoutButton">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>270</y>
-     <width>83</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Logout</string>
-   </property>
-  </widget>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QPushButton" name="algorithmButton">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>190</y>
-     <width>91</width>
-     <height>25</height>
+     <x>110</x>
+     <y>210</y>
+     <width>181</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(244, 200, 200);
+border-color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
     <string>Execute ACM</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>80</y>
-     <width>85</width>
-     <height>91</height>
+     <x>220</x>
+     <y>90</y>
+     <width>151</width>
+     <height>111</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QPushButton" name="addAnimalButton">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(244, 200, 200);
+border-color: rgb(0, 0, 0);</string>
+      </property>
       <property name="text">
        <string>Add Animal</string>
       </property>
@@ -58,6 +56,10 @@
     </item>
     <item>
      <widget class="QPushButton" name="addClientButton">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(244, 200, 200);
+border-color: rgb(0, 0, 0);</string>
+      </property>
       <property name="text">
        <string>Add Client</string>
       </property>
@@ -65,25 +67,39 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>80</y>
-     <width>114</width>
-     <height>91</height>
+     <x>20</x>
+     <y>90</y>
+     <width>151</width>
+     <height>111</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QPushButton" name="browseAnimalsButton">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(244, 200, 200);
+border-color: rgb(0, 0, 0);</string>
+      </property>
       <property name="text">
        <string>Browse Animals</string>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="browseClientsButton">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(244, 200, 200);
+border-color: rgb(0, 0, 0);</string>
+      </property>
       <property name="text">
        <string>Browse Clients</string>
       </property>
@@ -91,6 +107,70 @@
     </item>
    </layout>
   </widget>
+  <widget class="QFrame" name="frame">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>411</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(168, 36, 36);</string>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <widget class="QPushButton" name="logoutButton">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>10</y>
+      <width>83</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+border-color: rgb(0, 0, 0);
+</string>
+    </property>
+    <property name="text">
+     <string>Logout</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../Downloads/cuacs logo (b&amp;w).png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+  </widget>
+  <zorder>frame</zorder>
+  <zorder>algorithmButton</zorder>
+  <zorder>layoutWidget</zorder>
+  <zorder>layoutWidget</zorder>
  </widget>
  <resources/>
  <connections/>
