Finished client controller functionality

--- a/addanimalview.ui
+++ b/addanimalview.ui
@@ -19,9 +19,9 @@
   <widget class="QPushButton" name="animalAddButton">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>280</x>
      <y>420</y>
-     <width>111</width>
+     <width>91</width>
      <height>25</height>
     </rect>
    </property>
@@ -29,7 +29,7 @@
     <font>
      <family>Serif</family>
      <pointsize>13</pointsize>
-     <weight>9</weight>
+     <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
     </font>
@@ -243,14 +243,14 @@ border-color: rgb(0, 0, 0);
     <item>
      <widget class="QLabel" name="breedLabel">
       <property name="text">
-       <string>Breed:</string>
+       <string>Type:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="typeLabel">
       <property name="text">
-       <string>Type:</string>
+       <string>Breed:</string>
       </property>
      </widget>
     </item>
@@ -308,9 +308,9 @@ border-color: rgb(0, 0, 0);
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>0</x>
      <y>10</y>
-     <width>741</width>
+     <width>761</width>
      <height>51</height>
     </rect>
    </property>
@@ -345,27 +345,8 @@ border-color: rgb(0, 0, 0);
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="backButton">
-    <property name="geometry">
-     <rect>
-      <x>640</x>
-      <y>10</y>
-      <width>83</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(0, 0, 0);
-color: rgb(255, 255, 255);
-border-color: rgb(0, 0, 0);
-</string>
-    </property>
-    <property name="text">
-     <string>Back</string>
-    </property>
-   </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>420</x>
@@ -398,7 +379,7 @@ border-color: rgb(0, 0, 0);
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>420</x>
@@ -441,7 +422,7 @@ border-color: rgb(0, 0, 0);
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>420</x>
@@ -454,7 +435,7 @@ border-color: rgb(0, 0, 0);
     <item>
      <widget class="QLabel" name="dResistanceLabel">
       <property name="text">
-       <string>Desease Resistance</string>
+       <string>Disease Resistance</string>
       </property>
      </widget>
     </item>
@@ -484,7 +465,7 @@ border-color: rgb(0, 0, 0);
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>420</x>
@@ -527,7 +508,7 @@ border-color: rgb(0, 0, 0);
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>420</x>
@@ -565,7 +546,7 @@ border-color: rgb(0, 0, 0);
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>420</x>
@@ -598,7 +579,7 @@ border-color: rgb(0, 0, 0);
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>422</x>
@@ -710,7 +691,7 @@ border-color: rgb(0, 0, 0);
       </item>
       <item>
        <property name="text">
-        <string>$4000 and above</string>
+        <string>$4000+</string>
        </property>
       </item>
      </widget>
@@ -729,6 +710,25 @@ border-color: rgb(0, 0, 0);
      </spacer>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="backButton">
+   <property name="geometry">
+    <rect>
+     <x>390</x>
+     <y>420</y>
+     <width>83</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+border-color: rgb(0, 0, 0);
+</string>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
   </widget>
  </widget>
  <resources/>
