--- a/clientlogin.ui
+++ b/clientlogin.ui
@@ -13,42 +13,94 @@
   <property name="windowTitle">
    <string>Client Login</string>
   </property>
-  <widget class="QLineEdit" name="userName">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>114</y>
-     <width>121</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
+  <property name="styleSheet">
+   <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(255,255,255);</string>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>10</x>
      <y>120</y>
-     <width>81</width>
-     <height>17</height>
+     <width>91</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>FreeSerif</family>
+     <pointsize>14</pointsize>
+     <weight>9</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 14pt &quot;FreeSerif&quot;;
+
+</string>
+   </property>
+   <property name="text">
+    <string>UserName :</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="userName">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>120</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-color: rgb(255, 255, 255);</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>30</y>
+     <width>211</width>
+     <height>181</height>
     </rect>
    </property>
    <property name="text">
-    <string>UserName:</string>
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../Downloads/cuacs logo( black &amp; red).png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+   <property name="wordWrap">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="loginButton">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>180</y>
-     <width>83</width>
+     <x>180</x>
+     <y>220</y>
+     <width>101</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
+font: 75 11pt &quot;DejaVu Sans Mono&quot;;</string>
    </property>
    <property name="text">
     <string>Login</string>
    </property>
   </widget>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>loginButton</zorder>
+  <zorder>userName</zorder>
  </widget>
  <resources/>
  <connections/>
