--- a/animaldetailsview.ui
+++ b/animaldetailsview.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
-    <height>300</height>
+    <width>491</width>
+    <height>329</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>220</x>
      <y>50</y>
      <width>165</width>
-     <height>231</height>
+     <height>249</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -86,6 +86,20 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QLabel" name="label_22">
+      <property name="text">
+       <string>Vocal Tendency:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_23">
+      <property name="text">
+       <string>Claw State:</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QWidget" name="layoutWidget_2">
@@ -94,7 +108,7 @@
      <x>400</x>
      <y>50</y>
      <width>80</width>
-     <height>231</height>
+     <height>251</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -188,6 +202,26 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QLabel" name="vocalLabel">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="clawLabel">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QWidget" name="layoutWidget">
@@ -196,7 +230,7 @@
      <x>120</x>
      <y>50</y>
      <width>80</width>
-     <height>226</height>
+     <height>251</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -300,6 +334,16 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QLabel" name="wingedLabel">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QWidget" name="layoutWidget">
@@ -308,7 +352,7 @@
      <x>10</x>
      <y>50</y>
      <width>98</width>
-     <height>226</height>
+     <height>249</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -379,6 +423,13 @@
      <widget class="QLabel" name="label_10">
       <property name="text">
        <string>Playfulness:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_21">
+      <property name="text">
+       <string>Winged:</string>
       </property>
      </widget>
     </item>
