--- a/browseclientview.ui
+++ b/browseclientview.ui
@@ -32,6 +32,11 @@
      <height>25</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(255, 255, 255);
+border-color: rgb(0, 0, 0);</string>
+   </property>
    <property name="text">
     <string>Back</string>
    </property>
